2012-12-16 Borut Razem <borut.razem AT gmail.com>

	* src/SDCCglobl.h, src/SDCCmain.c:
	  fixed bug 3572584 - "Trigraphs don't work"

2012-12-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Do not generate redundant loads when fetching pair from regs.

2012-12-02 Molnar Karoly <molnarkaroly AT users.sf.net>
	* support/scripts/cinc2h.pl,
	  support/scripts/pic14-header-parser.pl,
	  support/scripts/pic16-header-parser.pl: I changed the copyright.

2012-12-01 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCC.y (labeled_statement): fixed bug #3590884

2012-11-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c (algebraicOpts),
	* src/SDCCicode.c (operandOperation),
	* src/SDCCsymt.c (bitsForType),
	* src/SDCCval.h,
	* src/SDCCval.c: working towards long long constant support

2012-11-25 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic16/pic18f6390.h,
	  device/non-free/lib/pic16/libdev/pic18f6390.c:
	  Repaired wrong address of RCREG, 0x0FA0 --> 0x0FAE.

2012-11-25 Molnar Karoly <molnarkaroly AT users.sf.net>
	* device/non-free/include/pic16/pic18f63j11.h,
	  device/non-free/lib/pic16/libdev/pic18f63j11.c:
	  Repaired wrong address of RCREG, 0x0FD0 --> 0x0FAE.

2012-11-24 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: LyX format update to lyxformat 413, LyX 2.x.x

2012-11-22 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCtree_dec.hpp:
	  Ensure we have an empty bag at the root in nice tree decompositions.
	* support/regression/tests/gcc-torture-execute-20060110-1.c:
	  Disable test which fails on arm for gbz80 due to unimplemented long long constants.

2012-11-20 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: removed duplicate commands my lyx edit added

2012-11-19 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* doc/sdccman.lyx: document --no-ret-without-call and fix some typos
